cluster/apps/kasten/k10/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k10-ingress
  namespace: kasten-io
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns/is-public: "true"
    hajimari.io/appName: "rook-ceph"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "k10.${SECRET_DOMAIN}"
      secretName: "k10-ingress-tls"
  rules:
    - host: "k10.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /k10
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
